Correccion API y servidor de gestion grupos
