# Nuevos Microservicios/Gestion_Grupos/GestionGrupos/app/controllers/GruposApiController.java
@@ -19,7 +19,7 @@ import javax.validation.constraints.*;
 
 import swagger.SwaggerUtils.ApiAction;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2018-01-13T15:37:03.349Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2018-01-14T16:40:26.439Z")
 
 public class GruposApiController extends Controller {
 
@@ -51,6 +51,11 @@ public class GruposApiController extends Controller {
 
     @ApiAction
     public Result postGrupoAsignadoPost() throws Exception {
+        JsonNode nodecuerpo = request().body().asJson();
+        Object cuerpo;
+
+        cuerpo = mapper.readValue(nodecuerpo.toString(), Object.class);
+
         String valueprofesor = request().getQueryString("profesor");
         String profesor;
 
@@ -61,7 +66,7 @@ public class GruposApiController extends Controller {
 
         grupo = Integer.parseInt(valuegrupo);
 
-        imp.postGrupoAsignadoPost(profesor, grupo);
+        imp.postGrupoAsignadoPost(profesor, grupo, cuerpo);
         
         return ok();
     }
